@@ -10,6 +10,7 @@ localsyncon = "*draghi*";
 ldaphost = "db.debian.org";
 usessl   = True;
 basedn   = "ou=users,dc=debian,dc=org";
+basebasedn = "dc=debian,dc=org";
 hostbasedn = "ou=hosts,dc=debian,dc=org";
 adminuser = "admin";
 
