@@ -14,12 +14,14 @@ userdir-ldap (0.3.XXX) UNRELEASED; urgency=low
       but instead re-use the domain from email-append.
     - now preserve server side modifcation times when rsyncing data.
   * userdir_ldap.py: read auth password from environment if set.
+  * Introduce BaseBaseDN which is the real base dn.  BaseDN itself
+    has historically been used as the root of the user tree.
 
   [ Stephen Gran ]
   * Fix deprecation warnings for sha module by using hashlib module instead
   * ud-fingerserv: update Net::LDAP import
 
- -- Peter Palfrader <weasel@debian.org>  Mon, 05 Mar 2012 11:17:36 +0100
+ -- Peter Palfrader <weasel@debian.org>  Mon, 05 Mar 2012 11:27:32 +0100
 
 userdir-ldap (0.3.79) unstable; urgency=low
 
